Fixed header font overflow in mobile screens

--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -35,7 +35,7 @@
     line-height: 100px;
 
     @media screen and (max-width: 960px) {
-      font-size: 4rem;
+      font-size: 3.8rem;
       line-height: 80px;
       padding: 1rem;
     }
